fixed overlapping nav

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,11 @@ h1 {
 .carousel a {
   margin: 0 auto;
 }
+
+.container {
+  padding-top: 30px;
+}
+
 @media (max-width: 900px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
